@@ -18,6 +18,12 @@ bzr-svn 0.4	UNRELEASED
    * Working tree copies will be disabled if the version of python-subversion 
      is too old.
 
+  PERFORMANCE
+
+   * do_update() is now used to find the contents of a directory recursively. 
+     This should reduce the number of roundtrips significantly when 
+	 finding file id mappings.
+
 
 bzr-svn 0.3	2007-01-16
 
